--- a/si-client/tsconfig.json
+++ b/si-client/tsconfig.json
@@ -28,6 +28,7 @@
       "@widgets/*": ["widgets/*"],
       "@app/*": ["app/*"],
       "@pages/*": ["pages/*"],
+      "@components/*": ["components/*"],
       "@processes/*": ["processes/*"]
     }
   },
