--- a/si-client/.gitignore
+++ b/si-client/.gitignore
@@ -13,6 +13,9 @@ dist-ssr
 *.local
 
 # Editor directories and files
+../.vscode/*
+../.metals/*
+.metals/*
 .vscode/*
 !.vscode/extensions.json
 .idea
