--- a/si-client/package.json
+++ b/si-client/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.13.7",
     "@mui/material": "^5.13.6",
     "@types/js-cookie": "^3.0.3",
+    "axios-jwt": "2.0.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
