--- a/si-client/tsconfig.json
+++ b/si-client/tsconfig.json
@@ -14,6 +14,8 @@
     "noEmit": true,
     "jsx": "react-jsx",
 
+    "strictPropertyInitialization": false,
+
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
@@ -29,6 +31,7 @@
       "@app/*": ["app/*"],
       "@pages/*": ["pages/*"],
       "@components/*": ["components/*"],
+      "@contexts/*": ["contexts/*"],
       "@processes/*": ["processes/*"]
     }
   },
