--- a/si-client/package.json
+++ b/si-client/package.json
@@ -18,6 +18,7 @@
     "axios-jwt": "2.0.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
+    "mui-file-input": "^2.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
